# datapyground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: mypy.yml  publish-docs.yaml  pytest.yml  ruff.yml
book/: README.md
docs/source/: conf.py  index.rst
docs/source/_autosummary/: datapyground.compute.base.rst  datapyground.compute.datasources.rst  datapyground.compute.expressions.rst  datapyground.compute.filtering.rst  datapyground.compute.pagination.rst  datapyground.compute.rst  datapyground.dataframe.rst  datapyground.rst  datapyground.utils.inspect.rst  datapyground.utils.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: module.rst
examples/: aggregate-compare.py  generate_test_data.py  geounits.py  play-compute.py  play-dataframe.py  ruff.toml  sorting-compare.py
src/: pyproject.toml
src/datapyground/: __init__.py
src/datapyground/commands/: __init__.py  fquery.py
src/datapyground/compute/: __init__.py  aggregate.py  base.py  datasources.py  expressions.py  filtering.py  join.py  pagination.py  selection.py  sorting.py
src/datapyground/dataframe/: __init__.py  dataframe.py
src/datapyground/sql/: __init__.py  expressions.py  parser.py  planner.py  tokenize.py
src/datapyground/utils/: __init__.py  inspect.py  tabulate.py
src/examples/: play-dataframe.py
test/: test_aggregate.py  test_datasources.py  test_expression.py  test_selection.py  test_sorting.py
test/compute/: test_aggregate.py  test_expression.py  test_innter_join.py  test_selection.py  test_sorting.py
test/data/: sales.csv  shops.csv
test/integration/: test_sql_execution.py
test/sql/: test_sq_parser.py  test_sql_expression.py  test_sql_parser.py  test_sql_planner.py  test_sql_tokenizer.py  test_tokenizer.py
