[project]
name = "datapyground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=17.0.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
