[project]
name = "datapyground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=17.0.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
    "sphinx>=8.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=src"
testpaths = ["test"]

[tool.ruff]
src = ["src"]
extend-exclude = ["docs"]
output-format = "grouped"
lint.select = ["E4", "E7", "E9", "F", "I001",
               "D100", "D101", "D102", "D103",
               "D104", "D107", "D417", "ANN001",
               "ANN201", "ANN202", "ANN204", 
               "ANN205", "ANN206"]